# dqmj1_util

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  index.rst
docs/api_documentation/: general.rst  index.rst  raw_data.rst  simple_data.rst
docs/raw_data/: index.rst
docs/simple_data/: index.rst
docs/tutorials/: index.rst  raw_data.rst  simple_data.rst
dqmj1_util/: __init__.py  _character_encoding.py  _region.py  _rom.py  character_encoding.py  region.py  rom.py
dqmj1_util/_guide/: __init__.py
dqmj1_util/_guide/templates/: index.html  skill_sets.html
dqmj1_util/_string_tables/: __init__.py  _string_tables.py
dqmj1_util/_string_tables/_locations/: __init__.py  _japan.py  _locations.py  _north_america.py
dqmj1_util/guide/: __init__.py
dqmj1_util/guide/templates/: base.html  encounters.html  index.html  skill.html  skill_set.html  skill_sets.html  skills.html
dqmj1_util/raw/: __init__.py  _btl_enmy_prm.py  _skill_tbl.py  _util.py  btl_enmy_prm.py  skill_tbl.py
dqmj1_util/simple/: __init__.py  _encounter.py  _skill.py  _skill_set.py  encounter.py  encounters.py  skill.py  skill_set.py
dqmj1_util/string_tables/: __init__.py  string_tables.py
dqmj1_util/string_tables/locations/: __init__.py  locations.py  north_america.py
tests/: test_character_encoding.py  test_guide.py  util.py
tests/raw/: test_btl_enmy_prm.py  test_skill_tbl.py
tests/simple/: test_encounter.py
